@startuml
class Video {
    +string DmmID
    +string Title
    +string DirectURL
    +string URL
    +string SampleURL
    +string ThumbnailURL
    +time.Time CreatedAt
    +int Price
    +int LikesCount
}
class Actress { +string ID \n +string Name }
class Genre { +string ID \n +string Name }
class Maker { +string ID \n +string Name }
class Series { +string ID \n +string Name }
class Director { +string ID \n +string Name }
class Review { +int Count \n +float32 Average }
class SearchMetadata { +int ResultCount \n +int TotalCount \n +int FirstPosition }

Video o-- "*" Actress
Video o-- "*" Genre
Video o-- "*" Maker
Video o-- "*" Series
Video o-- "*" Director
Video *-- Review
@enduml
